# myGame

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp  main_test.cpp
client/: CMakeLists.txt  Client.cpp  Client.h  EventQueue.cpp  EventQueue.h  Handler.cpp  Handler.h  Request.h
client/menu/: CMakeLists.txt  MainMenu.cpp  MainMenu.h  PlayMenu.cpp  PlayMenu.h
creating/: CMakeLists.txt
creating/buildings/: Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  CMakeLists.txt
creating/units/: CMakeLists.txt  Factory.cpp  Factory.h  Unit.cpp  Unit.h
factories/: CMakeLists.txt  EnglandUnitFactory.cpp  EnglandUnitFactory.h  Factory.cpp  Factory.h  RussianUnitFactory.cpp  RussianUnitFactory.h  UnitFactory.h
field/: CMakeLists.txt  Field.cpp  Field.h  FieldCell.cpp  FieldCell.h  MapProperties.h
game_module/: CMakeLists.txt  Game.cpp  Game.h
gameinfo/: buildings.json  map.txt  units.json
graphics/: CMakeLists.txt  Drawer.cpp  Drawer.h
parser/: CMakeLists.txt  Parser.cpp  Parser.h
src/: main.cpp
tests/: main_test.cpp  test.cpp
units/: CMakeLists.txt  EnglandUnits.h  RussianUnits.cpp  RussianUnits.h  Unit.cpp  Unit.h  UnitTypes.cpp  UnitTypes.h
